techloyce-salesforce/salesforce/src/objects/Copy2contact__c.object
<CustomObject>
    <fields>
        <fullName>auth_id__c</fullName>
        <externalId>true</externalId>
        <label>Authentication ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <description>Password</description>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <description>Copy2contact URL</description>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Copy2contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Copy2contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Copy2contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>